[fix] #5 collect(Collectors.toList())로 변경